--- a/bremersee-common/bremersee-common-api/pom.xml
+++ b/bremersee-common/bremersee-common-api/pom.xml
@@ -48,6 +48,10 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.googlecode.jmapper-framework</groupId>
+            <artifactId>jmapper-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
