--- a/bremersee-common/pom.xml
+++ b/bremersee-common/pom.xml
@@ -88,11 +88,10 @@
                 <module>bremersee-common-parent</module>
                 <module>bremersee-common-api</module>
                 <module>bremersee-common-spring</module>
+                <module>bremersee-common-spring-acl</module>
                 <module>bremersee-common-spring-autoconfigure</module>
+                <module>bremersee-common-spring-boot-starter</module>
             </modules>
         </profile>
     </profiles>
-
-    <modules>
-    </modules>
 </project>
