--- a/bremersee-common/bremersee-common-api/.gitignore
+++ b/bremersee-common/bremersee-common-api/.gitignore
@@ -1,2 +1,26 @@
-/target/
-/.settings/
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+/target/**
+*/target/**
+/.settings/**
+*/.settings/**
+/.apt_generated/
+*/.apt_generated/**
+.project
+**/.project
+.classpath
+**/.classpath
+.factorypath
+**/.factorypath
+
