--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+# Created by .ignore support plugin (hsz.mobi)
+### Java template
 *.class
+
+# BlueJ files
+*.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,17 +15,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+### Maven template
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
 
-/target/**
-*/target/**
-/.settings/**
-*/.settings/**
-/.apt_generated/
-*/.apt_generated/**
-.project
-**/.project
-.classpath
-**/.classpath
-.factorypath
-**/.factorypath
+# Exclude maven wrapper
+!/.mvn/wrapper/maven-wrapper.jar
 
+# IntelliJ configuration files
+*.iml
+.idea/
