--- a/bremersee-common/bremersee-common-dependencies/pom.xml
+++ b/bremersee-common/bremersee-common-dependencies/pom.xml
@@ -12,12 +12,12 @@
     <description>Common dependencies</description>
     
     <properties>
-        <bcprov.version>1.54</bcprov.version>
+        <bcprov.version>1.47</bcprov.version>
         <bremersee-common.version>1.0.0-SNAPSHOT</bremersee-common.version>
         <bremersee-comparator.version>1.2.1</bremersee-comparator.version>
         <bremersee-fac.version>1.1.0-SNAPSHOT</bremersee-fac.version>
         <bremersee-geojson.version>1.1.2</bremersee-geojson.version>
-        <bremersee-pagebuilder.version>1.2.1</bremersee-pagebuilder.version>
+        <bremersee-pagebuilder.version>1.2.2</bremersee-pagebuilder.version>
         <bremersee-sms.version>1.0.2-SNAPSHOT</bremersee-sms.version>
         <bremersee-utils.version>1.0.3</bremersee-utils.version>
         <commons.codec.version>1.10</commons.codec.version>
@@ -36,7 +36,7 @@
         <!-- <postgis-jdbc.version>1.5.2</postgis-jdbc.version> -->
         <postgresql.version>9.4.1211.jre7</postgresql.version>
         <spring-boot.version>1.4.1.RELEASE</spring-boot.version>
-        <spring-cloud.version>Camden.RELEASE</spring-cloud.version>
+        <spring-cloud.version>Camden.SR2</spring-cloud.version>
         <spring.version>4.3.3.RELEASE</spring.version>
         <springfox-swagger.version>2.5.0</springfox-swagger.version>
         <swagger.version>1.5.9</swagger.version>
