--- a/bremersee-common/bremersee-common-api/pom.xml
+++ b/bremersee-common/bremersee-common-api/pom.xml
@@ -33,6 +33,10 @@
         </dependency>
         <dependency>
             <groupId>org.bremersee</groupId>
+            <artifactId>bremersee-geojson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bremersee</groupId>
             <artifactId>bremersee-pagebuilder</artifactId>
         </dependency>
         <dependency>
