--- a/bremersee-common/bremersee-common-spring-autoconfigure/pom.xml
+++ b/bremersee-common/bremersee-common-spring-autoconfigure/pom.xml
@@ -31,6 +31,10 @@
         </dependency>
         <dependency>
             <groupId>org.bremersee</groupId>
+            <artifactId>bremersee-geojson</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.bremersee</groupId>
             <artifactId>bremersee-pagebuilder</artifactId>
         </dependency>
         <dependency>
@@ -187,7 +191,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <optional>true</optional>
+            <!--<optional>true</optional>-->
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -209,7 +213,12 @@
             <artifactId>jackson-module-parameter-names</artifactId>
             <optional>true</optional>
         </dependency>
-        
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+            <!--<optional>true</optional>-->
+        </dependency>
+
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
