--- a/bremersee-common/bremersee-common-data-jpa/pom.xml
+++ b/bremersee-common/bremersee-common-data-jpa/pom.xml
@@ -24,6 +24,10 @@
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-jaxb-annotations</artifactId>
+        </dependency>
     </dependencies>
     
 </project>
