--- a/bremersee-common/bremersee-common-dependencies/pom.xml
+++ b/bremersee-common/bremersee-common-dependencies/pom.xml
@@ -16,7 +16,7 @@
         <bremersee-common.version>1.0.0-SNAPSHOT</bremersee-common.version>
         <bremersee-comparator.version>1.2.1</bremersee-comparator.version>
         <bremersee-fac.version>1.1.0</bremersee-fac.version>
-        <bremersee-geojson.version>1.1.2</bremersee-geojson.version>
+        <bremersee-geojson.version>1.1.3</bremersee-geojson.version>
         <bremersee-pagebuilder.version>1.2.2</bremersee-pagebuilder.version>
         <bremersee-sms.version>1.0.2</bremersee-sms.version>
         <bremersee-utils.version>1.0.3</bremersee-utils.version>
@@ -100,13 +100,14 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <!-- Import dependency management from Spring Boot -->
+                <!-- import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- import dependency management from Spring Cloud -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-parent</artifactId>
