--- a/bremersee-common/bremersee-common-spring-boot-starter/bremersee-common-spring-boot-starter-acl/pom.xml
+++ b/bremersee-common/bremersee-common-spring-boot-starter/bremersee-common-spring-boot-starter-acl/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.bremersee</groupId>
             <artifactId>bremersee-common-spring-acl</artifactId>
         </dependency>
@@ -38,6 +42,21 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bremersee</groupId>
+            <artifactId>bremersee-common-spring-boot-starter-base</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     
