--- a/bremersee-common/bremersee-common-spring-acl/pom.xml
+++ b/bremersee-common/bremersee-common-spring-acl/pom.xml
@@ -16,21 +16,21 @@
     </properties>
 
     <dependencies>
-        <!--
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.bremersee</groupId>
+            <artifactId>bremersee-common-api</artifactId>
         </dependency>
-        -->
-        <!--
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-acl</artifactId>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
         </dependency>
-        -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-acl</artifactId>
         </dependency>
     </dependencies>
     
