--- a/bremersee-common/bremersee-common-spring-boot-starter/bremersee-common-spring-boot-starter-parent/pom.xml
+++ b/bremersee-common/bremersee-common-spring-boot-starter/bremersee-common-spring-boot-starter-parent/pom.xml
@@ -56,6 +56,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
