--- a/bremersee-common/bremersee-common-spring-data-jpa/pom.xml
+++ b/bremersee-common/bremersee-common-spring-data-jpa/pom.xml
@@ -18,11 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>org.bremersee</groupId>
-            <artifactId>bremersee-common-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.bremersee</groupId>
-            <artifactId>bremersee-common-spring</artifactId>
+            <artifactId>bremersee-common-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
@@ -31,6 +27,10 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-java8</artifactId>
         </dependency>
     </dependencies>
     
