--- a/bremersee-common/bremersee-common-spring-autoconfigure/pom.xml
+++ b/bremersee-common/bremersee-common-spring-autoconfigure/pom.xml
@@ -120,6 +120,11 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <optional>true</optional>
         </dependency>
