--- a/bremersee-common/bremersee-common-dependencies/pom.xml
+++ b/bremersee-common/bremersee-common-dependencies/pom.xml
@@ -17,7 +17,7 @@
         <bremersee-comparator.version>1.2.2</bremersee-comparator.version>
         <bremersee-fac.version>1.1.2</bremersee-fac.version>
         <bremersee-geojson.version>1.1.3</bremersee-geojson.version>
-        <bremersee-pagebuilder.version>1.2.3</bremersee-pagebuilder.version>
+        <bremersee-pagebuilder.version>1.3.0-SNAPSHOT</bremersee-pagebuilder.version>
         <bremersee-sms.version>1.0.3</bremersee-sms.version>
         <bremersee-utils.version>1.0.5</bremersee-utils.version>
         <commons.codec.version>1.10</commons.codec.version>
@@ -33,9 +33,9 @@
         <lombok.version>1.16.12</lombok.version>
         <person-directory-api.version>1.7.0</person-directory-api.version>
         <!--<postgresql.version>9.4.1211.jre7</postgresql.version>-->
-        <spring-boot.version>1.4.2.RELEASE</spring-boot.version>
-        <spring-cloud.version>Camden.SR4</spring-cloud.version>
-        <spring.version>4.3.4.RELEASE</spring.version>
+        <spring-boot.version>1.4.4.RELEASE</spring-boot.version>
+        <spring-cloud.version>Camden.SR5</spring-cloud.version>
+        <spring.version>4.3.6.RELEASE</spring.version>
         <springfox-swagger.version>2.6.1</springfox-swagger.version>
         <swagger.version>1.5.12</swagger.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
