--- a/bremersee-common/bremersee-common-spring-boot-starter/bremersee-common-spring-boot-starter-tomcat/pom.xml
+++ b/bremersee-common/bremersee-common-spring-boot-starter/bremersee-common-spring-boot-starter-tomcat/pom.xml
@@ -28,9 +28,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- max version 1.4.6.RELEASE
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-ws</artifactId>
         </dependency>
+        -->
     </dependencies>
 </project>
