--- a/bremersee-common/bremersee-common-dependencies/pom.xml
+++ b/bremersee-common/bremersee-common-dependencies/pom.xml
@@ -15,41 +15,28 @@
         <bcprov.version>1.47</bcprov.version>
         <bremersee-common.version>1.0.0-SNAPSHOT</bremersee-common.version>
         <bremersee-comparator.version>1.2.2</bremersee-comparator.version>
-        <bremersee-fac.version>1.1.2</bremersee-fac.version>
+        <bremersee-fac.version>1.1.3</bremersee-fac.version>
         <bremersee-geojson.version>1.1.3</bremersee-geojson.version>
         <bremersee-pagebuilder.version>1.3.0-SNAPSHOT</bremersee-pagebuilder.version>
         <bremersee-sms.version>1.0.3</bremersee-sms.version>
-        <bremersee-utils.version>1.0.5</bremersee-utils.version>
+        <bremersee-utils.version>1.0.6-SNAPSHOT</bremersee-utils.version>
         <commons.codec.version>1.10</commons.codec.version>
         <commons-io.version>2.5</commons-io.version>
         <commons-lang3.version>3.4</commons-lang3.version>
         <hibernate-jpa-2.1-api.version>1.0.0.Final</hibernate-jpa-2.1-api.version>
         <javax.inject.version>1</javax.inject.version>
         <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
-        <jersey.version>2.23.2</jersey.version>
-        <!--<jmapper-core.version>1.6.0.1</jmapper-core.version>-->
+        <jersey.version>2.25.1</jersey.version>
         <jts.version>1.13</jts.version>
         <ldaptive.version>1.2.0</ldaptive.version>
-        <lombok.version>1.16.12</lombok.version>
-        <person-directory-api.version>1.7.0</person-directory-api.version>
-        <!--<postgresql.version>9.4.1211.jre7</postgresql.version>-->
-        <spring-boot.version>1.4.4.RELEASE</spring-boot.version>
-        <spring-cloud.version>Camden.SR5</spring-cloud.version>
-        <spring.version>4.3.6.RELEASE</spring.version>
-        <springfox-swagger.version>2.6.1</springfox-swagger.version>
-        <swagger.version>1.5.12</swagger.version>
+        <lombok.version>1.16.18</lombok.version>
+        <spring-boot.version>1.5.6.RELEASE</spring-boot.version>
+        <spring-cloud.version>Dalston.SR3</spring-cloud.version>
+        <spring.version>4.3.10.RELEASE</spring.version>
+        <springfox-swagger.version>2.7.0</springfox-swagger.version>
+        <swagger.version>1.5.16</swagger.version>
         <validation-api.version>1.1.0.Final</validation-api.version>
     </properties>
-
-    <!--
-    <repositories>
-        <repository> 
-            <id>repository.spring.milestone</id> 
-            <name>Spring Milestone Repository</name> 
-            <url>http://repo.spring.io/milestone</url> 
-        </repository>
-    </repositories>
-    -->
 
     <developers>
         <developer>
@@ -285,14 +272,6 @@
                 <version>${hibernate-jpa-2.1-api.version}</version>
             </dependency>
 
-            <!-- @Jmap
-            <dependency>
-                <groupId>com.googlecode.jmapper-framework</groupId>
-                <artifactId>jmapper-core</artifactId>
-                <version>${jmapper-core.version}</version>
-            </dependency>
-            -->
-            
             <dependency>
                 <groupId>com.vividsolutions</groupId>
                 <artifactId>jts</artifactId>
@@ -327,20 +306,6 @@
                 <version>${lombok.version}</version>
             </dependency>
 
-            <!--
-            <dependency>
-                <groupId>org.postgresql</groupId>
-                <artifactId>postgresql</artifactId>
-                <version>${postgresql.version}</version>
-            </dependency>
-            -->
-            
-            <dependency>
-                <groupId>org.jasig.service.persondir</groupId>
-                <artifactId>person-directory-api</artifactId>
-                <version>${person-directory-api.version}</version>
-            </dependency>
-            
             <dependency>
                 <groupId>io.swagger</groupId>
                 <artifactId>swagger-annotations</artifactId>
