--- a/src/main/swagger/exception-model-mappings.json
+++ b/src/main/swagger/exception-model-mappings.json
@@ -1,6 +1,7 @@
 {
   "importMappings": {
-    "StackTraceItem": "org.bremersee.common.exhandling.model.StackTraceItem",
-    "RestApiException": "org.bremersee.common.exhandling.model.RestApiException"
+    "Handler": "org.bremersee.exception.model.Handler",
+    "RestApiException": "org.bremersee.exception.model.RestApiException",
+    "StackTraceItem": "org.bremersee.exception.model.StackTraceItem"
   }
 }
