New common for Spring Boot 2

--- a/src/main/swagger/exception-model.yml
+++ b/src/main/swagger/exception-model.yml
@@ -45,6 +45,7 @@ definitions:
   RestApiException:
     description: "The serialized exception."
     type: "object"
+    discriminator: _type
     properties:
       id:
         type: "string"
